<resources>
    <string name="app_name" translatable="false">DailySimple</string>
    <string name="bottom_nav_host" translatable="false">bottom_nav_host</string>

    <string name="channel_id_todo" translatable="false">channel_id_todo</string>
    <string name="channel_id_habit" translatable="false">channel_id_habit</string>
    <string name="channel_id_schedule" translatable="false">channel_id_schedule</string>

    <string name="deep_link_scheme" translatable="false">dsimp</string>

    <string name="percent" translatable="false">%d%%</string>

    <string name="match_with_dark_mode">Match with Dark mode</string>

    <string name="background_color">Background color</string>
    <string name="background_alpha">Background alpha</string>
    <string name="white">White</string>
    <string name="black">Black</string>

    <string name="task">Task</string>
    <string name="plan">Plan</string>
    <string name="daily">Daily</string>
    <string name="setting">Settings</string>

    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="general">General</string>
    <string name="about_dailysimple">About Daily Simple</string>

    <string name="schedule">Schedule</string>
    <string name="todo">To do</string>
    <string name="habit">Habit</string>

    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="new_item">New</string>

    <string name="title">Title</string>
    <string name="memo">Memo</string>
    <string name="alarm">Alarm</string>
    <string name="start">Start</string>
    <string name="repeat">Repeat</string>
    <string name="end">End</string>
    <string name="infinite">Infinite</string>

    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="times2_per_week">2 times per week</string>
    <string name="times5_per_week">5 times per week</string>
    <string name="custom">Custom</string>

    <string name="weak">Weak</string>
    <string name="normal">Normal</string>
    <string name="strong">Strong</string>

    <string name="guest">No Signed in</string>
    <string name="friends">Friends</string>

    <string name="january">JAN</string>
    <string name="february">FEB</string>
    <string name="march">MAR</string>
    <string name="april">APR</string>
    <string name="may">MAY</string>
    <string name="june">JUN</string>
    <string name="july">JUL</string>
    <string name="august">AUG</string>
    <string name="september">SEP</string>
    <string name="october">OCT</string>
    <string name="november">NOV</string>
    <string name="december">DEC</string>
    <string name="year">%d</string>
    <string name="date">%d</string>
    <string name="year_and_month">%2$s %1$s</string>
    <string name="year_and_month_date">%2$s %3$s, %1$s</string>

    <string name="today">Today</string>
    <string name="sunday">SU</string>
    <string name="monday">MO</string>
    <string name="tuesday">TU</string>
    <string name="wednesday">WE</string>
    <string name="thursday">TH</string>
    <string name="friday">FR</string>
    <string name="saturday">SA</string>

    <plurals name="plurals_day">
        <item quantity="one">@string/day</item>
        <item quantity="other">@string/days</item>
    </plurals>
    <string name="day">%d day</string>
    <string name="days">%d days</string>
    <string name="all_day">All day</string>

    <string name="abb_month">M</string>
    <string name="abb_week">W</string>
    <string name="abb_day">D</string>
    <string name="abb_hour">h</string>
    <string name="abb_minute">m</string>
    <string name="abb_second">s</string>

    <string name="left">left</string>
    <string name="past">past</string>
    <string name="after">after</string>

    <plurals name="plurals_overdue_task_message">
        <item quantity="one">@string/overdue_task_message</item>
        <item quantity="other">@string/overdue_tasks_message</item>
    </plurals>
    <string name="overdue_task_message">You have &lt;u>%d&lt;/u>overdue task</string>
    <string name="overdue_tasks_message">You have &lt;u>%d&lt;/u> overdue tasks</string>

    <plurals name="plurals_upcoming_task_message">
        <item quantity="one">@string/upcoming_task_message</item>
        <item quantity="other">@string/upcoming_tasks_message</item>
    </plurals>
    <string name="upcoming_task_message">You have &lt;u>%d&lt;/u> upcoming task</string>
    <string name="upcoming_tasks_message">You have &lt;u>%d&lt;/u> upcoming tasks</string>

    <string name="make_a_habit">Make a habit</string>
    <string name="make_a_todo">Make a todo</string>

    <string name="no_permission_to_read_calendar">There are no permission to access your calendar</string>

    <string name="no_schedule_message">There are no schedules</string>
    <string name="no_todo_message">There are no todo list</string>
    <string name="no_habit_message">There are no habits</string>
    <string name="no_task_message">There are no tasks</string>
</resources>
