<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/widget_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/rounded_view_background_small" />

    <ImageView
        android:id="@+id/prev"
        android:layout_width="@dimen/basic_icon_size_tiny_big"
        android:layout_height="@dimen/basic_icon_size_tiny_big"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/basic_view_margin_horizontal"
        android:layout_marginTop="@dimen/basic_view_margin_vertical"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ic_navigate_prev"
        android:tint="@color/appPrimary" />

    <TextView
        android:id="@+id/title"
        style="@style/BasicTextDpTinyBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/prev"
        android:layout_alignBottom="@id/prev"
        android:layout_marginStart="@dimen/basic_view_margin_horizontal_small"
        android:layout_marginEnd="@dimen/basic_view_margin_horizontal_small"
        android:layout_toEndOf="@id/prev"
        android:gravity="center_vertical"
        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="@dimen/basic_icon_size_tiny_big"
        android:layout_height="@dimen/basic_icon_size_tiny_big"
        android:layout_alignTop="@id/prev"
        android:layout_alignBottom="@id/prev"
        android:layout_toEndOf="@id/title"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ic_navigate_next"
        android:tint="@color/appPrimary" />

    <ImageView
        android:id="@+id/add"
        android:layout_width="@dimen/basic_icon_size_tiny_big"
        android:layout_height="@dimen/basic_icon_size_tiny_big"
        android:layout_alignTop="@id/prev"
        android:layout_alignBottom="@id/prev"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/basic_view_margin_horizontal"
        android:contentDescription="@string/setting"
        android:scaleType="center"
        android:src="@drawable/ic_add_black"
        android:tint="@color/appPrimary" />

    <ListView
        android:id="@+id/task_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/basic_view_margin_vertical" />

    <TextView
        android:id="@+id/empty_view"
        style="@style/BasicTextDpTinyBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_task_message"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>