<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/widget_preview"
            layout="@layout/app_widget_today_task"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/preview_bottom_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/preview_bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_background"
            style="@style/BasicTextDpTinySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_view_margin_horizontal"
            android:paddingTop="@dimen/basic_view_margin_vertical"
            android:paddingBottom="@dimen/basic_view_margin_vertical"
            android:text="@string/background_color"
            android:textColor="@color/basic_header_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/widget_preview" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/background_white"
            style="@style/BasicTextDpTinyBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_view_margin_horizontal"
            android:paddingTop="@dimen/basic_view_margin_vertical"
            android:paddingBottom="@dimen/basic_view_margin_vertical"
            android:text="@string/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_background" />

        <RadioButton
            android:id="@+id/radio_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/basic_view_margin_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/background_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/background_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/background_black"
            style="@style/BasicTextDpTinyBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_view_margin_horizontal"
            android:paddingTop="@dimen/basic_view_margin_vertical"
            android:paddingBottom="@dimen/basic_view_margin_vertical"
            android:text="@string/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/background_white" />

        <RadioButton
            android:id="@+id/radio_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/basic_view_margin_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/background_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/background_black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_background_alpha"
            style="@style/BasicTextDpTinySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_view_margin_horizontal"
            android:paddingTop="@dimen/basic_view_margin_vertical"
            android:paddingBottom="@dimen/basic_view_margin_vertical"
            android:text="@string/background_alpha"
            android:textColor="@color/basic_header_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/background_black" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/alpha_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_view_margin_horizontal"
            android:layout_marginEnd="@dimen/basic_view_margin_horizontal"
            android:max="255"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_background_alpha" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>