<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_view_background"
        android:paddingStart="@dimen/basic_view_margin_horizontal"
        android:paddingTop="@dimen/basic_view_margin_vertical"
        android:paddingEnd="@dimen/basic_view_margin_horizontal"
        android:paddingBottom="@dimen/basic_view_margin_vertical">

        <FrameLayout
            android:id="@+id/done"
            android:layout_width="@dimen/daily_overdue_popup_box_width"
            android:layout_height="@dimen/daily_overdue_popup_box_height"
            android:background="@drawable/ripple_list_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/done_icon"
                android:layout_width="@dimen/daily_overdue_popup_icon_size"
                android:layout_height="@dimen/daily_overdue_popup_icon_size"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/checked_oval_stroke" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/done_text"
                style="@style/BasicTextDpTinySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="@dimen/basic_view_margin_vertical_small"
                android:text="@string/done" />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/edit"
            android:layout_width="@dimen/daily_overdue_popup_box_width"
            android:layout_height="@dimen/daily_overdue_popup_box_height"
            android:layout_marginStart="@dimen/daily_overdue_popup_box_margin_horizontal"
            android:background="@drawable/ripple_list_item"
            app:layout_constraintStart_toEndOf="@id/done"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit_icon"
                android:layout_width="@dimen/daily_overdue_popup_icon_size"
                android:layout_height="@dimen/daily_overdue_popup_icon_size"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/ic_edit"
                android:tint="@color/basic_icon_background" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/edit_text"
                style="@style/BasicTextDpTinySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/edit" />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/delete"
            android:layout_width="@dimen/daily_overdue_popup_box_width"
            android:layout_height="@dimen/daily_overdue_popup_box_height"
            android:layout_marginStart="@dimen/daily_overdue_popup_box_margin_horizontal"
            android:background="@drawable/ripple_list_item"
            app:layout_constraintStart_toEndOf="@id/edit"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/delete_icon"
                android:layout_width="@dimen/daily_overdue_popup_icon_size"
                android:layout_height="@dimen/daily_overdue_popup_icon_size"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/ic_delete"
                android:tint="@color/basic_icon_background" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/delete_text"
                style="@style/BasicTextDpTinySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/delete" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>