<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.dd.android.dailysimple.common.DateUtils" />

        <variable
            name="locale"
            type="java.util.Locale" />

        <variable
            name="model"
            type="com.dd.android.dailysimple.db.DailyHabit" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@android:color/transparent"
            android:stateListAnimator="@animator/show_toolbar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                app:collapsedTitleTextAppearance="@style/CollapsingTitleStyle"
                app:contentScrim="@color/ux_common_background"
                app:expandedTitleTextAppearance="@style/ExpandedTitleStyle"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:scrimAnimationDuration="200"
                app:toolbarId="@id/toolbar">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_collapseMode="parallax"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/habit_main" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/daily_menu" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="15dp"
                app:cardBackgroundColor="@color/ux_common_view_background"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/color_picker"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/oval"
                        android:tint="@{model.color, default=@color/colorPrimary}"
                        app:layout_constraintBottom_toBottomOf="@id/title_editor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/title_editor" />

                    <androidx.appcompat.widget.AppCompatEditText
                        style="@style/UxCommonDpTextStyleNormal"
                        android:id="@+id/title_editor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/title"
                        android:text="@{model.title}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/color_picker"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/start"
                        style="@style/UxCommonDpTextStyleTinyBig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/start"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_editor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/end"
                        style="@style/UxCommonDpTextStyleTinyBig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/end"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/start" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/start_date"
                        style="@style/UxCommonDpTextStyleTinyBig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="2020. 03. 15"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/start" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/end_date"
                        style="@style/UxCommonDpTextStyleTinyBig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="2020. 03. 15"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/end" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/memo_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_memo"
                        android:tint="@color/ux_common_sub_text_color"
                        app:layout_constraintBottom_toBottomOf="@id/memo_editor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/memo_editor" />

                    <androidx.appcompat.widget.AppCompatEditText
                        style="@style/UxCommonDpTextStyleNormal"
                        android:id="@+id/memo_editor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/memo"
                        android:text="@{model.memo}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/memo_icon"
                        app:layout_constraintTop_toBottomOf="@id/end" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>